--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ DB_NAME = 'banana'
 DB_USER = 'sezim'
 DB_PASSWORD = '1'
 DB_PORT = 5432
+
+EMAIL_HOST = smtp.gmail.com
+EMAIL_USER = maitukinovva02@gmail.com
+EMAIL_PASSWORD = 0509090819asasas
+EMAIL_PORT = 587
+EMAIL_USE_TLS = True
